Initial rewrite of parallelism and synchronizations.  I tried to break this into categories to make it feel less like a laundry list.  More to do, as always, but suggestions and proof-reading is welcome.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13668 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -1254,7 +1254,7 @@ computation.  Single variables are similar to sync variables, but they
 are assigned once.  Using a single variable before it is assigned,
 suspends the computation until another task assigns a value to it.
 For more information about synchronization variables
-see~\rsec{Synchronization_Variables}.
+see~\rsec{Sync_Variables} and~\rsec{Single_Variables}.
 \begin{chapel}
 var x: single int;
 var y: sync real;
