--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -23,7 +23,7 @@ type-specifier:
 \end{syntax}
 
 Sync and single types are discussed
-in~\rsec{Synchronization_Variables}.
+in~\rsec{Sync_Variables} and~\rsec{Single_Variables}.
 
 Programmers can define their own enumerated types, classes, records,
 unions, and type aliases in type declaration statements summarized by
